Addition on GPU, copyin to finalizecomm
1. Connected CopyingIn tasks to FinalizeComm task. Finalize can proceed
after the last block is copied into GPU.
2. Added CannonIteration number in input state to avoid conflicts
between cannon's iterations
3. Fixed a defect in assigning tag values to avoid conflicts between
cannon's iterations.
4. Moved addition task to GPU - reduces copyout from O(blocks^3) to
O(blocks^2)

--- a/tutorial8/CMakeLists.txt
+++ b/tutorial8/CMakeLists.txt
@@ -1,3 +1,9 @@
+cuda_add_library(vectorAdd SHARED
+        vectorAdd.cu
+        OPTIONS -arch sm_70 -O3 -g
+)
+
+
 add_executable(tutorial8_distribute_dgemm
 		tutorial8.cc
 
@@ -30,7 +36,8 @@ target_compile_definitions(tutorial8_distribute_dgemm PUBLIC
 target_link_libraries(tutorial8_distribute_dgemm
 		${Hedgehog_LIBRARIES}
 		${CUDA_LIBRARIES}
-		cuda)
+		cuda
+		vectorAdd)
 
 target_include_directories(tutorial8_distribute_dgemm PUBLIC
 		${Hedgehog_INCLUDE_DIR}
